<resources>
    <string name="app_name">Covid Zero</string>
    <string name="btnGlobalName">Global</string>
    <string name="btn_sri_lankaName">Sri Lanka</string>
    <string name="lblDeaths">Deaths</string>
    <string name="lblRecovered">Recovered</string>
    <string name="lblActive">Active</string>
    <string name="lblConfirmed">Confirmed</string>
    <string name="lblMoreDetails">Find out More</string>
    <string name="lblSample">Total Tests</string>
    <string name="lblAffectedCountries">Affected Countries</string>
    <string name="lblPb">Loading…</string>
    <string name="no_connection">Whoops!</string>
    <string name="no_connection_txt">Slow or no internet connections. Please check your internet settings.</string>
    <string name="try_again">Try Again</string>
    <string name="symptoms_of">Symptoms of</string>
    <string name="covid_19">COVID-19</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="headache">Headache</string>
    <string name="breathless">Breathless</string>
    <string name="fever">Fever</string>
    <string name="know_more_txt">To know more about COVID-19</string>
    <string name="more_info">More Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="get_your_pcrTest_txt">Have you been tested?</string>
    <string name="think_sick">If you think you\'ve been exposed?</string>
    <string name="api_key">d450bca4de2144d5b3d805e5bc614b15</string>
    <string name="get_vaccinated_txt">Get vaccinated for COVID-19</string>
    <string name="More_info"><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">More info</a></string>
    <string name="sick_starting">If you have a cough, a fever or difficulty breathing, and you are worried that you may have COVID-19, here are recommendations on what to do, step by step.</string>
    //sign_in
    <string name="sign_in_hi">Welcome</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_continue_with_google">Continue with Google</string>
    <string name="sign_in_continue">Continue</string>
    <string name="sign_in_or">or</string>
    <string name="sign_in_don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_sign_up">Sign up</string>
    <string name="sign_in_forgot_your_password">Forgot your password?</string>
    //sign_up
    <string name="sign_up_welcome">Sign up</string>
    <string name="sign_up_name">Full Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_agree_and_continue">Agree and continue</string>
    <string name="sign_up_agree_and_continue_p1">By selecting Agree and continue below,</string>
    <string name="sign_up_agree_and_continue_p2">I agree to</string>
    <string name="sign_up_agree_and_continue_p3">Terms of Service and Privacy</string>
    <string name="sign_up_agree_and_continue_p4">Policy</string>
    //forgot_password
    <string name="fp_forgot_password">Forgot password</string>
    <string name="fp_submit">Submit</string>
    <string name="fp_text_p1">Don\'t worry it happens. Please enter the</string>
    <string name="fp_text_p2">email associated with your account.</string>
    <string name="profile_personal_details">Personal details</string>
    <string name="profile_name">Name</string>
    <string name="profile_username">Username</string>
    <string name="profile_contact_details">Contact details</string>
    <string name="profile_email">Email</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="sign_up_p_page_n1">1</string>
    <string name="sign_up_p_page_n2">/2</string>
    <string name="sign_up_p_password_must_be">Password must be</string>
    <string name="sign_up_p_at_least_8_characters">At least 8 characters</string>
    <string name="sign_up_p_minimum_1_number">Minimum 1 number</string>
    <string name="sign_up_p_minimum_1_uppercase">Minimum 1 uppercase</string>
    <string name="sign_up_p_minimum_1_special_symbol">Minimum 1 special symbol</string>
    <string name="sign_up_page_n1">1/</string>
    <string name="sign_up_page_n2">2</string>
    <string name="sign_in_password">Password</string>
    <string name="news_title">News</string>
    <string name="news_detailed_read_more">Read More</string>
    <string name="vc_vaccine_centers">Vaccine Centers</string>
    <string name="vc_list">List</string>
    <string name="vc_map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vcl_police_area_txt">Police Area</string>
    <string name="vcl_get_directions">Get Directions</string>
    <string name="vcl_alert_district_txt">District</string>
    <string name="vcl_alert_center_name">Vaccine Center Name</string>
    <string name="vcl_center_name">Vaccine Center Name</string>
    <string name="vcl_district">District</string>
</resources>