<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_black"
    android:theme="@style/reg_txtInputLayout"
    tools:context=".LoginSignup.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="bottom"
            android:background="@drawable/image_fade_gradient_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sign_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightest_black"
            android:scaleType="centerCrop"
            android:src="@drawable/covid_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:background="@drawable/image_fade_gradient_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/sign_in_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="45dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/sign_in_hi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="10dp"
        app:cardElevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_hi">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/sign_in_blurView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blur_view_round_corners">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="60dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_in_email_txt_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sign_in_email"
                    android:textColorHint="@color/gray"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/reg_txt_input_layout"
                    app:boxStrokeErrorColor="@color/red_pie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_email_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_in_password_txt_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Password"
                    android:textColorHint="@color/gray"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    app:boxStrokeColor="@color/reg_txt_input_layout"
                    app:boxStrokeErrorColor="@color/red_pie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_email_txt_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_password_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/sign_in_google"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_google"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/ripple_10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_text_or">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:text="@string/sign_in_continue_with_google"
                        android:textColor="@color/lightest_black"
                        android:textSize="17sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/sign_in_continue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_continue_round_10_red"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:foreground="@drawable/ripple_10dp"
                    android:gravity="center"
                    android:text="@string/sign_in_continue"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_password_txt_field" />

                <TextView
                    android:id="@+id/start_text_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/sign_in_or"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_continue"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/start_text_do_not_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/sign_in_don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_google" />

                <TextView
                    android:id="@+id/sign_in_text_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/sign_in_sign_up"
                    android:textColor="@color/red_pie"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="@+id/start_text_do_not_have_account"
                    app:layout_constraintStart_toEndOf="@+id/start_text_do_not_have_account"
                    app:layout_constraintTop_toTopOf="@+id/start_text_do_not_have_account"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/sign_in_text_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/sign_in_forgot_your_password"
                    android:textColor="@color/red_pie"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_text_do_not_have_account"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </eightbitlab.com.blurview.BlurView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
