<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView2"
    android:layout_width="match_parent"
    android:layout_height="163dp"
    android:layout_marginTop="10dp"
    android:scrollbars="none"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/symptoms_txt">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="163dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cough_card"
            android:layout_width="140dp"
            android:layout_height="163dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="16dp"
            android:padding="20dp"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/re_cough" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/dry_cough"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/head_card"
            android:layout_width="140dp"
            android:layout_height="163dp"
            android:layout_marginEnd="10dp"
            android:elevation="16dp"
            android:padding="20dp"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/re_head" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/headache"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/heart_card"
            android:layout_width="140dp"
            android:layout_height="163dp"
            android:layout_marginEnd="10dp"
            android:elevation="16dp"
            android:padding="20dp"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/re_heart" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/breathless"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fever_card"
            android:layout_width="140dp"
            android:layout_height="163dp"
            android:layout_marginEnd="10dp"
            android:elevation="16dp"
            android:padding="20dp"
            app:cardCornerRadius="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/re_fever" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/fever"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</HorizontalScrollView>